--- a/DesktopAdvanced1Attributes/1.00.AdvancedAttributes.md
+++ b/DesktopAdvanced1Attributes/1.00.AdvancedAttributes.md
@@ -1,6 +1,6 @@
-# Advanced Attribute Handling #
+# Gestion avancée des attributs #
 
-Handling attributes are one of the most common operations carried out in FME. Users need to set attributes, edit them, and use them within most workspaces.
+Les attributs de manipulation sont l'une des opérations les plus courantes effectuées dans FME. Les utilisateurs doivent définir des attributs, les modifier et les utiliser dans la plupart des espaces de travail.
 
 ![](./Images/Img1.000.AttributeManagementIntro.png)
 
