--- a/DesktopAdvanced1Attributes/1.00.AdvancedAttributes.md
+++ b/DesktopAdvanced1Attributes/1.00.AdvancedAttributes.md
@@ -1,6 +1,6 @@
 # Gestion avancée des attributs #
 
-Les attributs de manipulation sont l'une des opérations les plus courantes effectuées dans FME. Les utilisateurs doivent définir des attributs, les modifier et les utiliser dans la plupart des espaces de travail.
+La manipulation des attributs est l'une des opérations les plus courantes effectuées dans FME. Les utilisateurs doivent définir des attributs, les modifier et les utiliser dans la plupart des workspaces.
 
 ![](./Images/Img1.000.AttributeManagementIntro.png)
 
